# zenconnect

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LOGGING_STANDARD.md  README.md  docker-compose.yml  pyproject.toml
.agents/: settings.json
.agents/rules/: gemini.md  git.md
.agents/skills/git-workflow/: SKILL.md
.agents/skills/issue-start/: SKILL.md
.agents/skills/session-end/: SKILL.md
.agents/workflows/: session-end.md
.opencode/commands/: snapshot.md
app/: config.py  db.py  main.py  models.py  telemetry.py  worker.py
app/routers/: debug.py  handoff.py  webhook.py
app/services/: handoff.py  persistence.py  rag.py  working_hours.py  zendesk.py
docs/learnings/2026-03/15/: 16.54_arq-worker-function-registration.md
docs/learnings/2026-03/16/: 12.47_dynamic-debounce-redis-ttl.md
migrations/: 001_initial_schema.sql
plan/: zendesk-ai-agent-plan.md
scripts/: load_sim.py
tests/: conftest.py  integration_2conversations.sh  integration_debounce.sh  test_handoff.py  test_isolation.py  test_persistence.py  test_rag.py  test_telemetry.py  test_webhook.py  test_worker.py  test_working_hours.py  test_zendesk.py
